# hs-kmip

./: .gitignore  .travis.yml  LICENSE  README.md  Ttlv.hs  hs-kmip.cabal  stack.yaml
bench/: Bench.hs
client/Kmip/: Client.hs
server/: Main.hs
server/Kmip/: Server.hs
src/: Kmip.hs  Kmip10Data.hs  Kmip10Spec.hs  Ttlv.hs
src/Kmip/: Server.hs  ServerSpec.hs
src/Ttlv/: Attributes.hs  Client.hs  ClientSpec.hs  Data.hs  Enum.hs  Lens.hs  Message.hs  Objects.hs  ObjectsSpec.hs  Operations.hs  Parser.hs  ParserSpec.hs  Structures.hs  Tag.hs  Validator.hs
src/Ttlv/Parser/: Binary.hs  Serialize.hs
src/Ttlv/Validator/: Attributes.hs  Message.hs  Objects.hs  ObjectsSpec.hs  Operations.hs  Structures.hs  Types.hs
tests/: Kmip10Data.hs  Kmip10Spec.hs
tests/Kmip/: ServerSpec.hs
tests/Ttlv/: ClientSpec.hs  ParserQuickSpec.hs  ParserSpec.hs
tests/Ttlv/Validator/: MessagesSpec.hs  ObjectsSpec.hs
