name:                hs-kmip
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Aaron Marks
maintainer:          nymacro@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Ttlv.Parser.Binary
                     , Ttlv.Parser.Serialize
                     , Ttlv.Enum
                     , Ttlv.Data
                     , Ttlv.Tag
                     , Ttlv.Lens
                     , Ttlv.Validator.Types
                     , Ttlv.Validator.Structures
                     , Ttlv.Validator.Message
                     , Ttlv.Validator.Objects
                     , Ttlv.Validator.Operations
                     , Ttlv.Validator.Attributes
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       HTTP >= 4000.0
                     , base >=4.8 && <4.9
                     , base16-bytestring >= 0.1.1.6
                     , base64-bytestring >= 1.0
                     , binary >=0.7 && <0.8
                     , bytestring >=0.10 && <0.11
                     , containers >= 0.0
                     , crypto-numbers >= 0.2.3
                     , data-default >= 0.5
                     , hspec >= 1.11.4
                     , lens >= 0.0
                     , network-uri >= 2.6.0.2
                     , old-locale >=1.0 && <1.1
                     , scotty >= 0.0
                     , text >= 0
                     , time >=1.5 && <1.6
                     , attoparsec
                     , cereal
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
                     , client
                     , server
  main-is:             Main.hs
  ghc-options:         -Wall
  default-extensions:  DoAndIfThenElse
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , hs-kmip
                     , HTTP
                     , network-uri
                     , bytestring
                     , time
                     , base16-bytestring
                     , base64-bytestring
                     , old-locale
                     , lens
                     , scotty
                     , text
                     , lens
                     , blaze-html
                     , blaze-markup
                     , stitch
                     , wai
                     , hspec-wai >= 0.6.3

executable bench
  hs-source-dirs:      bench
                     , tests
  main-is:             Bench.hs
  ghc-options:         -Wall
  default-extensions:  DoAndIfThenElse
  default-language:    Haskell2010
  build-depends:       base
                     , hs-kmip
                     , criterion
                     , text
                     , bytestring
                     , time
                     , base16-bytestring
                     , base64-bytestring

executable server
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      server
  other-modules:       Kmip.Server
  default-language:    Haskell2010
  build-depends:       base
                     , hs-kmip
                     , scotty
                     , text
                     , bytestring
                     , base64-bytestring
                     , lens
                     , blaze-html
                     , blaze-markup
                     , stitch
                     , wai
